MDEV-15980 FOR SYSTEM_TIME BETWEEN and FROM .. TO work with negative intervals

Fixed by using exactly the same filtering conditions as specified by standard
in 7.6 <table reference> General Rules